--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "mongoose": "^7.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
