--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
+    "mz": "^2.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.7.2"
@@ -48,6 +49,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/mz": "^2.7.7",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
