--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.3",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^9.4.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
