--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^7.5.3",
     "mz": "^2.7.0",
     "reflect-metadata": "^0.1.13",
+    "rtcmulticonnection-server": "^1.3.3",
     "rxjs": "^7.2.0",
     "socket.io": "^4.7.2"
   },
