--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/serve-static": "^4.0.0",
@@ -35,13 +36,16 @@
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
     "mz": "^2.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rtcmulticonnection-server": "^1.3.3",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "webrtc.io": "^0.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -54,6 +58,7 @@
     "@types/jest": "29.5.0",
     "@types/mz": "^2.7.7",
     "@types/node": "18.15.11",
+    "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
