--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
     "mz": "^2.7.0",
+    "nanoid": "^3.3.7",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rtcmulticonnection-server": "^1.3.3",
