--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/microservices": "^10.2.10",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
@@ -31,6 +33,8 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^9.4.3",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.3.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
@@ -38,10 +42,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "mongoose": "^7.5.3",
     "mz": "^2.7.0",
     "nanoid": "^3.3.7",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.6.11",
     "reflect-metadata": "^0.1.13",
     "rtcmulticonnection-server": "^1.3.3",
     "rxjs": "^7.2.0",
@@ -53,6 +59,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.13",
