--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^9.4.3",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.3.1",
     "cache-manager-redis-store": "^2.0.0",
@@ -46,17 +48,22 @@
     "mongoose": "^7.5.3",
     "mz": "^2.7.0",
     "nanoid": "^3.3.7",
+    "nodemailer": "^6.9.7",
+    "otp-generator": "^4.0.1",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rtcmulticonnection-server": "^1.3.3",
     "rxjs": "^7.2.0",
     "socket.io": "^4.7.2",
+    "uniqid": "^5.4.0",
     "webrtc.io": "^0.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/amqplib": "^0.10.4",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/cookie-parser": "^1.4.4",
@@ -65,8 +72,11 @@
     "@types/jest": "29.5.0",
     "@types/mz": "^2.7.7",
     "@types/node": "18.15.11",
+    "@types/nodemailer": "^6.4.14",
+    "@types/otp-generator": "^4.0.2",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.11",
+    "@types/uniqid": "^5.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
